@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.127 2002/08/23 07:55:05 mikulik Exp $
+C RCS $Id: gnuplot.doc,v 1.128 2002/08/23 10:08:33 mikulik Exp $
 C 18 September 2001
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001   Thomas Williams, Colin Kelley et al.
 C
@@ -7267,7 +7267,7 @@ C ... and restart the table:
  commands control the major tics on the y, z, x2 and y2 axes.
 
  Syntax:
-       set xtics {axis | border} {{no}mirror} {{no}rotate}
+       set xtics {axis | border} {{no}mirror} {{no}rotate {by <ang>}}
                  {  autofreq
                   | <incr>
                   | <start>, <incr> {,<end>}
@@ -7287,7 +7287,8 @@ C ... and restart the table:
 
  `rotate` asks `gnuplot` to rotate the text through 90 degrees, which will be
  done if the terminal driver in use supports text rotation.  `norotate`
- cancels this.
+ cancels this. `rotate by <ang>` asks for rotation by <ang> degrees, supported
+ by some terminal types.
 
  The defaults are `border mirror norotate` for tics on the x and y axes, and
  `border nomirror norotate` for tics on the x2 and y2 axes.  For the z axis,
